# routes/contacts.js
@@ -10,111 +10,7 @@ const {
   deleteContact
 } = require("../controllers/contacts");
 
-/**
- * @swagger
- * /contacts:
- *   get:
- *     summary: Get all contacts
- *     tags: [Contacts]
- *     responses:
- *       200:
- *         description: List of contacts
- *         content:
- *           application/json:
- *             schema:
- *               $ref: '#/components/schemas/ContactResponse'
- */
-
-/**
- * @swagger
- * /contacts/{id}:
- *   get:
- *     summary: Get a contact by ID
- *     tags: [Contacts]
- *     parameters:
- *       - in: path
- *         name: id
- *         schema:
- *           type: string
- *         required: true
- *         description: MongoDB ID of the contact
- *     responses:
- *       200:
- *         description: Contact data
- *         content:
- *           application/json:
- *             schema:
- *               $ref: '#/components/schemas/ContactResponse'
- */
-
-/**
- * @swagger
- * /contacts:
- *   post:
- *     summary: Create a new contact
- *     tags: [Contacts]
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             $ref: '#/components/schemas/Contact'
- *     responses:
- *       201:
- *         description: Contact created successfully
- *         content:
- *           application/json:
- *             schema:
- *               $ref: '#/components/schemas/ContactResponse'
- */
-
-/**
- * @swagger
- * /contacts/{id}:
- *   put:
- *     summary: Update a contact
- *     tags: [Contacts]
- *     parameters:
- *       - in: path
- *         name: id
- *         schema:
- *           type: string
- *         required: true
- *         description: MongoDB ID of the contact
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             $ref: '#/components/schemas/Contact'
- *     responses:
- *       200:
- *         description: Contact updated
- *         content:
- *           application/json:
- *             schema:
- *               $ref: '#/components/schemas/ContactResponse'
- */
-
-/**
- * @swagger
- * /contacts/{id}:
- *   delete:
- *     summary: Delete a contact
- *     tags: [Contacts]
- *     parameters:
- *       - in: path
- *         name: id
- *         schema:
- *           type: string
- *         required: true
- *         description: MongoDB ID of the contact
- *     responses:
- *       200:
- *         description: Contact deleted
- */
-
-// Route definitions
+// GET endpoints
 router.get("/", getAllContacts);
 router.get("/:id", getContact);
 router.post("/", createContact);
